--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,11 +9,30 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, ubuntu-16.04]
+        rust: [stable, nightly]
 
     steps:
+    - uses: hecrj/setup-rust-action@v1
+        with:
+          rust-version: ${{ matrix.rust }}
+
     - uses: actions/checkout@v2
+
     - name: Build
       run: cargo build --verbose
+
+    - name: Build release
+      run: cargo build --release --verbose
+
     - name: Run tests
       run: cargo test --verbose
+
+    - name: Upload Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: yps_rust-${{ matrix.rust }}-${{ matrix.os }}
+          path: target/release/yps
