--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Build release
       run: cargo build --release --verbose
 
-    - name: Strip release
+    - if: matrix.os == 'ubuntu-*'
+      name: Strip release
       run: strip target/release/yps
 
     - name: Run tests
