--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,4 +40,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: yps_rust-${{ matrix.rust }}-${{ matrix.os }}
-        path: target/release/yps
+        path: target/release/yps*
