--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,10 +1,6 @@
 name: Rust
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -30,7 +26,7 @@ jobs:
       run: cargo build --release --verbose
 
     - name: Strip release
-      if: contains(matrix.os, 'windows')
+      if: contains(matrix.os, 'ubuntu')
       run: strip target/release/yps
 
     - name: Run tests
