--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -49,6 +49,10 @@ jobs:
         uses: hecrj/setup-rust-action@v1.3.1
         with:
           rust-version: ${{ matrix.rust }}
+
+      - name: Install rust target
+        run: rustup target add ${{ matrix.target }}
+
       - name: Checkout
         uses: actions/checkout@v2
 
