--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -68,5 +68,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
         with:
-          name: yps_rust-${{ matrix.rust }}-${{ matrix.os }}
+          name: yps_rust-${{ matrix.rust }}_${{ matrix.target }}_${{ matrix.os }}
           path: target/release/yps.exe
