--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -69,4 +69,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: yps_rust-${{ matrix.rust }}_${{ matrix.target }}_${{ matrix.os }}
-          path: target/release/yps.exe
+          path: target/${{ matrix.target }}/release/yps.exe
